# free-llm-demos

./: LICENSE  README.md  devday.env
devday/: .gitignore  Makefile  README.md  __init__.py  demo.sh  pyproject.toml  talk.py
